# Generative-City-Wallet

./: .env.example  .gitignore  :memory:  AGENTS.md  DATA-SOURCES-PLAN.md  DI-PLAN.md  Dockerfile  PLAN.md  README.md  Taskfile.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  turbo.json
Frontend Spark/: bun.lockb  index.html  package.json  vite.config.ts
Tech-Pitch/: Spark Tech Stack.html
backend/: __init__.py
docs/: 00-VISION.md  02-ARCHITECTURE.md  03-CONTEXT-ENGINE.md  04-GENERATIVE-ENGINE.md  06-MVP-SCOPE.md  07-DEMO-SCRIPT.md  08-OPEN-QUESTIONS.md  09-CRITIQUE.md  10-OFFER-SELECTION.md  12-SUBMISSION-README.md  13-ON-DEVICE-AI-AND-KNOWLEDGE-GRAPH.md  14-STAKEHOLDER-CONFLICT-RESOLUTION.md  15-FINN-BRIEFING.md  16-ADVANCED-SIGNALS.md  17-BUILD-PLAN.md  18-DSV-GAP-ANALYSIS.md  19-PRODUCT-OVERVIEW.md  20-MERCHANT-DASHBOARD.md  ARCHITECTURE.md  CONCEPT.md  DATA-MODEL.md  DEVELOPMENT.md  DISCUSSION.md  HACKATHON_JUDGE_GUIDE.md  HACKATHON_SUBMISSION.md  INTEGRATION.md  MONOREPO-STRUCTURE.md  NEO4J-GRAPH.md  README.md  REPOSITORY-OVERVIEW.md  SUBMISSION.md  TECH-DEBT.md  Tech-stack.md  USER-KNOWLEDGE-GRAPH-NEO4J.md  UX-RATIONALE.md
mobile/: App.tsx  README.md  metro.config.js
resources/: Gemini-Chat.md  Reddit Thread - Air Canada's chatbot gave a customer wrong info and they got sued for it. How are you preventing this_.md  mock_events_munich.json  mock_events_stuttgart.json  mock_venues_munich.json
scripts/: README.md  benchmark_offer_latency.py  fetch_venues.py  run_graph_maintenance.py  (+1 more)
(+384 files in other folders)
